# SO2

./: .gitignore  README.md  so2.workspace
IPC_Calculator/: IPC_Calculator.sln
__test_site/: __test_site.mk  __test_site.project  compile_flags.txt
dll_mutex/: .gitignore  .txt  compile_flags.txt  dll_mutex.project  main.c
heap_asm/: compile_flags.txt  heap_asm.mk  heap_asm.project  main.c
heap_sbrk/: compile_flags.txt  heap_sbrk.mk  heap_sbrk.project
heap_sbrk-sim/: compile_flags.txt  custom_unistd.h  heap_sbrk-sim.mk  heap_sbrk-sim.project  heap_sbrk-sim.txt  main.c  memmanager.c
ncurses-10counters/: .gitignore  compile_flags.txt  main.c  ncurses-10counters.project
nibble_stream/: CMakeLists.txt  main.c
nsem-test1/: main.c  nsem-test1.project
nsem1-create/: .gitignore  compile_flags.txt  main.c  nsem1-create.mk  nsem1-create.project
nsem2-create/: compile_flags.txt  nsem2-create.mk  nsem2-create.project  nsem2-create.txt
nsem2-open/: compile_flags.txt  nsem2-open.mk  nsem2-open.project  nsem2-open.txt
pcalc/: .gitignore  compile_flags.txt  pcalc.project
pcalc2/: .gitignore  compile_flags.txt  pcalc2.project
pdec/: .gitignore  compile_flags.txt  main.c  pdec.project
pdec-mutex/: .gitignore  compile_flags.txt  main.c  pdec-mutex.project
processes/: CMakeLists.txt  ansi_colors.h
processes/.run/: sample_process.run.xml
processes/execl1/: CMakeLists.txt  main.c
processes/execl2_fork/: main.c
processes/execl3_fork_waitpid/: main.c
processes/fork1/: main.c
processes/fork_bomb/: CMakeLists.txt  main.c
processes/fork_sem_shm/: CMakeLists.txt  main.c
processes/fork_threads/: main.c
processes/fork_x1/: CMakeLists.txt  main.c
processes/fork_x2/: main.c
processes/fork_x3/: main.c
processes/ppid/: main.c
processes/sample_process/: main.c
processes/spawn0_processh/: main.c
processes/spawn1/: main.c
processes/spawn1_quick/: main.c
processes/spawn2_long/: main.c
processes/spawn2_wait/: main.c
processes/spawn3_long_wait/: CMakeLists.txt  main.c
sem-mutex/: .gitignore  compile_flags.txt  sem-mutex.project
sem-start/: .gitignore  compile_flags.txt  main.c  sem-start.project
semaphores/: CMakeLists.txt
shm1-create/: main.c  shm1-create.project
shm2-client/: .gitignore  common.h  shm2-client.project
shm2-server/: main.c  shm2-server.project
shm3-generator/: compile_flags.txt  shm3-generator.mk  shm3-generator.project  shm3-generator.txt
shm3-sumator/: compile_flags.txt  shm3-sumator.mk  shm3-sumator.project  shm3-sumator.txt
show-join/: .gitignore  compile_flags.txt  main.c  show-join.project
show-mutex/: main.c  (+3 more)
signals/: CMakeLists.txt
signals/mutex_deadlock/: CMakeLists.txt  main.c
signals/p_alarm/: CMakeLists.txt  alarm_main.c
signals/p_signal_receiver/: sigrecv_main.c
signals/p_signal_receiver_SEGV/: sigrecv_main.c
signals/p_signal_receiver_multithread/: CMakeLists.txt  sigrecv_main.c
signals/p_signal_receiver_simple/: sigrecv_main.c
signals/p_signal_sender/: sigsend_main.c
signals/p_signal_sender_kill/: CMakeLists.txt  sigsend_main.c
signals/p_signal_sender_sigqueue/: CMakeLists.txt
signals/p_signal_sender_sigqueue_simple/: sigsend_sigqueue_main.c
signals/sem_wait_interrupt_multithreaded/: CMakeLists.txt  main.c
signals/sem_wait_interrupt_singlethread/: main.c
upgrade/: CMakeLists.txt
upgrade/_sandbox/: main.c
upgrade/dll_mutex/: main.c
upgrade/heap_asm/: CMakeLists.txt  main.c
upgrade/heap_sbrk/: main.c
upgrade/nsem1-create-exclusive/: main.c
upgrade/nsem1-create-reopen/: main.c
upgrade/nsem2-create/: main_create.c
upgrade/nsem2-open/: main-open.c
upgrade/pcalc/: main.c
upgrade/pcalc2/: main.c
upgrade/pdec/: CMakeLists.txt  main.c
upgrade/pdec-mutex/: main.c
upgrade/sem-mutex/: main.c
upgrade/sem-start/: main.c
upgrade/shm1-PROT_EXEC/: CMakeLists.txt  linker.lds  main.c
upgrade/shm1-SegVOnWrite/: main.c
upgrade/shm1-create/: main.c
upgrade/shm2-client/: main.c
upgrade/shm2-server/: main.c
upgrade/shm2a-client/: main.c
upgrade/shm2a-server/: common.h  main.c
upgrade/shm3-generator/: CMakeLists.txt  shm3gen.c
upgrade/shm3-sumator/: common.h  shm3sum.c
upgrade/show-pth/: main.c
upgrade/show-pth2/: main.c
upgrade/show1-single/: main.c
upgrade/show2-pth/: main.c
upgrade/show3-pth2/: main.c
(+24 files in other folders)
